# metaflow-serve

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
examples/: deploy_hf_model.py
src/metaflow_extensions/serve/: __init__.py
src/metaflow_extensions/serve/plugins/: artifacts.py  codegen.py  deployment.py  mfextinit_serve.py  service.py  simulator.py
src/metaflow_extensions/serve/plugins/backends/: __init__.py  backend.py  huggingface.py
src/metaflow_extensions/serve/plugins/cards/serve_card/: __init__.py  card.py
tests/: conftest.py  test_artifacts.py  test_backend_interface.py  test_card.py  test_codegen.py  test_deployment.py  test_e2e.py  test_huggingface_backend.py  test_readme.py  test_service.py  test_simulator.py
