[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaflow-serve"
version = "0.1.0"
description = "Model serving extension for Metaflow — deploy endpoints with full lineage tracking"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "metaflow>=2.12",
]
authors = [
    { name = "npow" },
]
keywords = [
    "metaflow",
    "serving",
    "deployment",
    "inference",
    "mlops",
    "model-serving",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/npow/metaflow-serve"
Repository = "https://github.com/npow/metaflow-serve"
Issues = "https://github.com/npow/metaflow-serve/issues"

[project.optional-dependencies]
huggingface = ["huggingface_hub>=0.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metaflow_extensions"]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
src = ["src"]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print in lib code)
    "PT",   # flake8-pytest-style
    "PIE",  # flake8-pie
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "RET",  # flake8-return
]

[tool.ruff.lint.per-file-ignores]
"src/metaflow_extensions/serve/plugins/cards/serve_card/card.py" = ["E501"]
"tests/**" = ["S101", "S105", "S106", "T20"]  # allow assert, hardcoded passwords/tokens, print
"examples/**" = ["T20"]               # allow print in examples

[tool.ruff.lint.isort]
known-first-party = ["metaflow_extensions"]
force-single-line = true

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = []

# ── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["metaflow_extensions.serve"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "metaflow.*",
    "huggingface_hub.*",
    "mcp.*",
]
ignore_missing_imports = true
follow_imports = "skip"
